# conway

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml  deploy.yml  stripe-e2e.yml  test.yml
access-controller/: .gitignore  Cargo.toml  HARDWARE.md  README.md  aiorepl.py  build-ota.sh  build.rs  build.sh  espflash.toml  main.py  network.env.example  partitions.csv
access-controller/.cargo/: config.toml
access-controller/hardware/: .gitignore  Makefile  orthoroute.json  pcb_design.py  pcb_design_sklib.py  pcb_generate.py  requirements.txt
access-controller/src/: conway.rs  core.rs  core0.rs  core1.rs  crypto.rs  decode.rs  device_key.rs  dhcp_server.rs  dns_server.rs  events.rs  fob_store.rs  heap_debug.rs  http.rs  lib.rs  main.rs  ota.rs  settings.rs  shared.rs  signing.rs  storage.rs  swipe_log.rs  sync.rs  wiegand.rs
access-controller/tests/: Cargo.toml  README.md  access_core.rs  events_tests.rs  storage_tests.rs  sync_tests.rs  wiegand_decode.rs  wiegand_tests.rs
access-controller/tools/: README.md  provision-device-key.sh
ansible/: ansible-inventory
ansible/playbooks/: conway.yaml
cmd/conway/: integration_test.go  main.go
cmd/devlogin/: main.go
cmd/glider/: api.go  api_test.go  main.go  main_test.go
db/: 01-init.sql  02-base.sql  03-email.sql  04-prune-paypal.sql  05-metrics.sql  07-fix-event-logic.sql  10-printers-v2.sql  11-timestamp-remaining.sql  12-log-pruning.sql  13-dynamic-metrics.sql  13-metric-samplings.sql  15-waiver-signs-dedup.sql  16-printer-events-indexes.sql  17-discord-sync-queue.sql  db.go  db_test.go  migration.sql
e2e/: accessdenied_test.go  accessibility_test.go  admin_advanced_test.go  admin_metrics_test.go  admin_search_test.go  admin_settings_test.go  admin_test.go  auth_test.go  directory_picture_test.go  discount_workflow_e2e_test.go  e2e_test.go  elections_test.go  email_queue_test.go  fobapi_test.go  health_test.go  helpers_test.go  journeys_test.go  keyfob_test.go  kiosk_test.go  machines_action_test.go  machines_test.go  member_misc_test.go  member_test.go  oauth2_full_test.go  oauth2_test.go  pages_test.go  scenarios_test.go  screenshots_test.go  signs_admin_test.go  signs_helpers_test.go  signs_limits_test.go  signs_test.go  triggers_admin_test.go  waiver_test.go  webhook_e2e_test.go
engine/: app.go  db.go  db_test.go  ed25519_signer.go  error.templ  error_templ.go  errors.go  errors.templ  errors_templ.go  errors_test.go  events.go  flowcontrol.go  flowcontrol_test.go  form.go  probes.go  process.go  router.go  router_test.go  server.go  signing.go  signing_test.go  streammux.go  streammux_test.go  time.go  token.go  token_test.go  workqueue.go
engine/assets/: conway.css  styles.css  webauthn.js
engine/config/: config.go  config_test.go  parse.go  registry.go  store.go
engine/db/: 02-base.sql  03-email.sql  06-stripe-cleanup.sql  08-discord-oauth.sql  09-printers.sql  10-printers-v2.sql  14-printer-events-dedup.sql  18-unique-fob-swipes.sql  19-no-more-glider.sql  20-remove-printer-prune.sql  21-glider-trigger-cleanup.sql  db.go  db_test.go  schema.sql
engine/fixtures/: TestRenderError_client_error_400_client_error.html  TestRenderError_client_error_404_not_found.html  TestRenderError_edge_case_499_edge_case_499.html  TestRenderError_server_error_500_server_error.html  TestRenderError_server_error_502_bad_gateway.html
engine/oauthlogin/: oauthlogin.go  oauthlogin_test.go
engine/settings/: definitions.go  migrate.go  store.go
engine/templates/: error.html
engine/testutil/: templates.go
internal/templates/: templates.go
internal/testing/: templates.go
modules/: register.go
modules/accessdenied/: config.go  module.go  module_test.go
modules/admin/: README.md  admin.go  admin.templ  admin_templ.go  admin_test.go  config.go  config.templ  config_templ.go  configui.templ  configui_templ.go  list.templ  list_templ.go  member.templ  member_templ.go  member_test.go  meta.go  module.go  module_test.go  settings.templ  settings_templ.go
modules/api/: client.go  client_test.go  helpers.go  integration_test.go  module.go  module_test.go
modules/auth/: README.md  auth.go  cleanup_test.go  config.go  ctx.go  login.templ  login_templ.go  login_test.go  module.go  module_test.go  oauth.go  passkey.go
modules/badgenotify/: config.go  config.templ  config_templ.go  module.go
modules/bambu/: cache.go  cache_test.go  module.go  module_test.go
modules/bootstrap/: README.md  bootstrap.go  bootstrap.templ  bootstrap_templ.go  bootstrap_test.go  module.go
modules/calendar/: calendar.templ  calendar_templ.go  config.go  ical.go  module.go  overlap.go  recurrence.go
modules/core/: cleanup_test.go  module.go  schema.go  schema.sql  schema_test.go  testing.go
modules/directory/: README.md  directory.templ  directory_templ.go  image.go  module.go  module_test.go  profile.templ  profile_templ.go
modules/discord/: README.md  client.go  config.go  config.templ  config_templ.go  module.go  module_test.go  notifier.go  triggers.go  triggers_test.go  webhooks.go  webhooks.templ  webhooks_templ.go
modules/discordbot/: README.md  config.go  e2e_test.go  interactions.go  interactions_test.go  module.go  sender.go  sender_test.go  verify.go  verify_test.go
modules/discordwebhook/: README.md  module.go  module_test.go  sender.go  template.go  template_test.go
modules/elections/: config.go  elections.templ  elections_templ.go  handlers.go  models.go  module.go
modules/email/: README.md  google.go  module.go  module_test.go
modules/fobapi/: README.md  config.go  config.templ  config_templ.go  module.go  module_test.go
modules/generic-access-controller/: client.go  html.go  html_test.go  module.go  reconciliation.go  reconciliation_test.go
modules/google/: README.md  config.go  config.templ  config_templ.go  module.go
modules/keyfob/: keyfob.templ  keyfob_templ.go  module.go  module_test.go
modules/kiosk/: README.md  keyfob.templ  keyfob_templ.go  kiosk.go  kiosk.templ  kiosk_templ.go  (+2 more)
scripts/: .gitignore  dump-txns.py
static/: static.go
(+204 files in other folders)
