[package]
name = "access-controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "access_controller"
path = "src/lib.rs"

[[bin]]
name = "access-controller"
path = "src/main.rs"
# Binary requires the firmware (esp32) feature; under `--features sim` (host
# tests) only the library is built, so the binary is skipped.
required-features = ["esp32"]

[dependencies]
# Always-available pure deps (no_std friendly, no hardware required)
heapless = "0.8"
log = "0.4"

# Firmware-only deps (only present when the `esp32` feature is enabled)
esp-hal = { version = "1.0", features = ["unstable", "rt"], optional = true }
esp-radio = { version = "0.17", default-features = false, features = ["wifi", "smoltcp", "log-04", "unstable"], optional = true }
esp-rtos = { version = "0.2", features = ["esp-radio", "embassy", "log-04"], optional = true }
esp-alloc = { version = "0.9", optional = true }
esp-println = { version = "0.13", default-features = false, features = ["log", "uart"], optional = true }
esp-bootloader-esp-idf = { version = "0.1", optional = true }
esp-storage = { version = "0.6", features = ["esp32"], optional = true }
embedded-storage = { version = "0.3", optional = true }

# Use same embassy versions that esp-rtos uses
embassy-executor = { version = "0.9", optional = true }
embassy-time = { version = "0.5", optional = true }
embassy-sync = { version = "0.7", optional = true }
embassy-net = { version = "0.8", features = ["dhcpv4", "tcp", "medium-ethernet", "proto-ipv4", "dns"], optional = true }
embassy-futures = { version = "0.1", optional = true }

smoltcp = { version = "0.12", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-dhcpv4", "socket-tcp", "socket-dhcpv4"], optional = true }
embedded-io-async = { version = "0.7", optional = true }
static_cell = { version = "2", optional = true }

[dev-dependencies]
proptest = "1"

[features]
default = ["esp32"]
esp32 = [
    "dep:esp-hal", "esp-hal/esp32",
    "dep:esp-radio", "esp-radio/esp32",
    "dep:esp-rtos", "esp-rtos/esp32",
    "dep:esp-alloc",
    "dep:esp-println", "esp-println/esp32",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-storage",
    "dep:embedded-storage",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-sync",
    "dep:embassy-net",
    "dep:embassy-futures",
    "dep:smoltcp",
    "dep:embedded-io-async",
    "dep:static_cell",
]
# Host-side deterministic simulation tests. Enables std, no hardware deps.
# Run with: cargo test --no-default-features --features sim --target x86_64-unknown-linux-gnu
sim = []

# Override esp32 PAC to use the git version that esp-hal 1.0 was built against
[patch.crates-io]
esp32 = { git = "https://github.com/esp-rs/esp-pacs", rev = "5d7a479" }

[profile.release]
opt-level = "s"
lto = true

# esp-storage's ROM-call shims require opt-level >= 2 to inline correctly;
# building it at "s" panics at compile time.
[profile.release.package.esp-storage]
opt-level = 3
